--- a/SistemaTeste2/SistemaTeste2/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SistemaTeste2/SistemaTeste2/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,77 +5,110 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"]</h2>
-<div class="row">
-    <div class="col-md-4">
-        <section>
-            <form method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+<head>
+    <meta charset="utf-8">
+    <title>Login</title>
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Antic Slab' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Ubuntu:wght@300;500;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="~/css/login.css">
+</head>
+<body>
+    <div  id="form">
+    
+    <h2 id="title">@ViewData["Title"]</h2>
+    <div class="row" id="textField">
+        <div class="col-md-4">
+            <section>
+                <form method="post">
+                    @*<h4>Use a local account to log in.</h4>
+        <hr />*@
+                    <div asp-validation-summary="All" class="text-danger"></div>
+                    <div class="form-group" id="textField">
+                        @*<label asp-for="Input.Email"></label>*@
+                        <input asp-for="Input.Email" class="form-control textType" id="emailInput" placeholder="Email" />
+                        @*<span asp-validation-for="Input.Email" class="text-danger"></span>*@
                     </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-default">Log in</button>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
+                    <div class="form-group" id="textField">
+                        @*<label asp-for="Input.Password"></label>*@
+                        <input asp-for="Input.Password" class="form-control textType" id="passwordInput" placeholder="Password" />
+                        <input id="buttonEye" type="image" src="https://icons.iconarchive.com/icons/glyphish/glyphish/24/12-eye-icon.png">
+                        @*<span asp-validation-for="Input.Password" class="text-danger"></span>*@
+                    </div>
+                    <div class="form-group">
+                        <div class="checkbox" id="checkboxDiv">
+                            <label asp-for="Input.RememberMe">
+                                <input asp-for="Input.RememberMe" />
+                                @Html.DisplayNameFor(m => m.Input.RememberMe)
+                            </label>
+                        </div>
+
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-default" id="loginButton">Log in</button>
+                    </div>
                     <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
+                        <p class="normalText">
+                            Or login with
                         </p>
                     </div>
-                }
-                else
-                {
-                    <form asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                    <!-- div facebook and google login -->
+                    <div>
                         <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
+                            <input class="socialButton" id="socialButtonFacebook" type="button" value="Facebook">
                         </div>
-                    </form>
-                }
-            }
-        </section>
+                        <div>
+                            <input class="socialButton" id="socialButtonGoogle" type="button" value="Google">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        @*<p>
+                <a asp-page="./ForgotPassword">Forgot your password?</a>
+            </p>*@
+                        <p class="normalText">
+                            Not a member? <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register now</a>
+                        </p>
+                    </div>
+                </form>
+            </section>
+        </div>
     </div>
-</div>
+        @*<div class="col-md-6 col-md-offset-2">
+                <section>
+                    <h4>Use another service to log in.</h4>
+                    <hr />
+                    @{
+                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                        {
+                            <div>
+                                <p>
+                                    There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
+                                    for details on setting up this ASP.NET application to support logging in via external services.
+                                </p>
+                            </div>
+                        }
+                        else
+                        {
+                            <form asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                <div>
+                                    <p>
+                                        @foreach (var provider in Model.ExternalLogins)
+                                        {
+                                            <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                        }
+                                    </p>
+                                </div>
+                            </form>
+                        }
+                    }
+                </section>
+            </div>*@
+    </div>
+</body>
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
