parte de atualizacao de pessoas feita, falta conseguir atualizar o usuario logado

--- a/SistemaTeste2/SistemaTeste2/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SistemaTeste2/SistemaTeste2/Areas/Identity/Pages/Account/Login.cshtml
@@ -69,7 +69,8 @@
                 <a asp-page="./ForgotPassword">Forgot your password?</a>
             </p>*@
                         <p class="normalText">
-                            Not a member? <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register now</a>
+                            @*Not a member? <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register now</a>*@
+                            Not a member? <a asp-controller="Sistema" asp-action="form">Register now</a>
                         </p>
                     </div>
                 </form>
