--- a/SistemaTeste2/SistemaTeste2/Views/Shared/_Layout.cshtml
+++ b/SistemaTeste2/SistemaTeste2/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     @*<title>@ViewData["Title"] Sistema Teste</title>*@
     <!--Partial adiciona um código na view-->
-    <partial name="_LoginPartial" />
+    @*<partial name="_LoginPartial" />*@
 </head>
 <body>
     <partial name="_CookieConsentPartial" />
