--- a/SistemaTeste2/SistemaTeste2/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SistemaTeste2/SistemaTeste2/Areas/Identity/Pages/Account/Login.cshtml
@@ -17,66 +17,66 @@
     <link rel="stylesheet" href="~/css/login.css">
 </head>
 <body>
-    <div  id="form">
-    
-    <h2 id="title">@ViewData["Title"]</h2>
-    <div class="row" id="textField">
-        <div class="col-md-4">
-            <section>
-                <form method="post">
-                    @*<h4>Use a local account to log in.</h4>
-        <hr />*@
-                    <div asp-validation-summary="All" class="text-danger"></div>
-                    <div class="form-group" id="textField">
-                        @*<label asp-for="Input.Email"></label>*@
-                        <input asp-for="Input.Email" class="form-control textType" id="emailInput" placeholder="Email" />
-                        @*<span asp-validation-for="Input.Email" class="text-danger"></span>*@
-                    </div>
-                    <div class="form-group" id="textField">
-                        @*<label asp-for="Input.Password"></label>*@
-                        <input asp-for="Input.Password" class="form-control textType" id="passwordInput" placeholder="Password" />
-                        <input id="buttonEye" type="image" src="https://icons.iconarchive.com/icons/glyphish/glyphish/24/12-eye-icon.png">
-                        @*<span asp-validation-for="Input.Password" class="text-danger"></span>*@
-                    </div>
-                    <div class="form-group">
-                        <div class="checkbox" id="checkboxDiv">
-                            <label asp-for="Input.RememberMe">
-                                <input asp-for="Input.RememberMe" />
-                                @Html.DisplayNameFor(m => m.Input.RememberMe)
-                            </label>
-                        </div>
+    <div id="form">
 
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-default" id="loginButton">Log in</button>
-                    </div>
-                    <div>
-                        <p class="normalText">
-                            Or login with
-                        </p>
-                    </div>
-                    <!-- div facebook and google login -->
-                    <div>
-                        <div>
-                            <input class="socialButton" id="socialButtonFacebook" type="button" value="Facebook">
+        <h2 id="title">@ViewData["Title"]</h2>
+        <div class="row" id="textField">
+            <div class="col-md-4">
+                <section>
+                    <form method="post">
+                        @*<h4>Use a local account to log in.</h4>
+                            <hr />*@
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <div class="form-group" id="textField">
+                            @*<label asp-for="Input.Email"></label>*@
+                            <input asp-for="Input.Email" class="form-control textType" id="emailInput" placeholder="Email" style="width:90%;margin-top:10px;"/>
+                            @*<span asp-validation-for="Input.Email" class="text-danger"></span>*@
+                        </div>
+                        <div class="form-group" id="textField">
+                            @*<label asp-for="Input.Password"></label>*@
+                            <input asp-for="Input.Password" class="form-control textType" id="passwordInput" placeholder="Password"style="width:90%;margin-top:0px;"/>
+                            <input id="buttonEye" type="image" src="https://icons.iconarchive.com/icons/glyphish/glyphish/24/12-eye-icon.png">
+                            @*<span asp-validation-for="Input.Password" class="text-danger"></span>*@
+                        </div>
+                        <div class="form-group">
+                            <div class="checkbox" id="checkboxDiv" >
+                                <label asp-for="Input.RememberMe">
+                                    <input asp-for="Input.RememberMe" />
+                                    @Html.DisplayNameFor(m => m.Input.RememberMe)
+                                </label>
+                            </div>
+
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default" id="loginButton">Log in</button>
                         </div>
                         <div>
-                            <input class="socialButton" id="socialButtonGoogle" type="button" value="Google">
+                            <p class="normalText">
+                                Or login with
+                            </p>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        @*<p>
-                <a asp-page="./ForgotPassword">Forgot your password?</a>
-            </p>*@
-                        <p class="normalText">
-                            @*Not a member? <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register now</a>*@
-                            Not a member? <a asp-controller="Sistema" asp-action="form">Register now</a>
-                        </p>
-                    </div>
-                </form>
-            </section>
+                        <!-- div facebook and google login -->
+                        <div>
+                            <div>
+                                <input class="socialButton" id="socialButtonFacebook" type="button" value="Facebook">
+                            </div>
+                            <div>
+                                <input onclick="clickeye" class="socialButton" id="socialButtonGoogle" type="button" value="Google">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            @*<p>
+                                    <a asp-page="./ForgotPassword">Forgot your password?</a>
+                                </p>*@
+                            <p class="normalText">
+                                @*Not a member? <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register now</a>*@
+                                Not a member? <a asp-controller="Sistema" asp-action="form">Register now</a>
+                            </p>
+                        </div>
+                    </form>
+                </section>
+            </div>
         </div>
-    </div>
         @*<div class="col-md-6 col-md-offset-2">
                 <section>
                     <h4>Use another service to log in.</h4>
@@ -110,6 +110,18 @@
     </div>
 </body>
 
+<script>
+    //faz o botão do olho funcionar
+    var clickeye =  function () {
+        var passwordInput = document.getElementById("passwordInput");
+        if (passwordInput.type == "password") {
+            passwordInput.type = "text";
+        }
+        else {
+            passwordInput.type = "password";
+        }
+    });
+</script>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
