--- a/SistemaTeste2/SistemaTeste2/Views/Sistema/Dashboard.cshtml
+++ b/SistemaTeste2/SistemaTeste2/Views/Sistema/Dashboard.cshtml
@@ -34,7 +34,7 @@
             position:absolute;
             top:6vh;
             font-family:'Ubuntu',sans-serif;">Hello @UserManager.GetUserName(User)</a>
-            <button type="submit" class="btn btn-link navbar-btn navbar-link" style="padding:11px;">Logout</button>
+            <button type="submit" onclick="logoutButton()" class="btn btn-link navbar-btn navbar-link" style="padding:11px;">Logout</button>
         </form>
             <button id="addNewUser">
                 <!-- esta tag asp-controller leva para o controller e asp-action leva para o método deste controller -->
@@ -122,6 +122,7 @@
             <button id="2button"> <span>2</span> </button>
             <button id="1button"> <span>1</span> </button>
             <button> Previous </button>
+            
         </div>
     </div>
 </body>
@@ -130,8 +131,7 @@
 @section Scripts
     {
     <script type="text/javascript">
-
-
+            
     </script>
 
 }
