--- a/SistemaTeste2/SistemaTeste2/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SistemaTeste2/SistemaTeste2/Areas/Identity/Pages/Account/Login.cshtml
@@ -25,21 +25,21 @@
                 <section>
                     <form name="loginform" method="post">
                         @*<h4>Use a local account to log in.</h4>
-                            <hr />*@
+                <hr />*@
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group" id="textField">
                             @*<label asp-for="Input.Email"></label>*@
-                            <input asp-for="Input.Email" class="form-control textType" id="emailInput" placeholder="Email" style="width:90%;margin-top:10px;"/>
+                            <input asp-for="Input.Email" class="form-control textType" id="emailInput" placeholder="Email" style="width:90%;margin-top:10px;" />
                             @*<span asp-validation-for="Input.Email" class="text-danger"></span>*@
                         </div>
                         <div class="form-group" id="textField">
                             @*<label asp-for="Input.Password"></label>*@
-                            <input asp-for="Input.Password" class="form-control textType" id="passwordInput" placeholder="Password"style="width:90%;margin-top:0px;"/>
+                            <input asp-for="Input.Password" class="form-control textType" id="passwordInput" placeholder="Password" style="width:90%;margin-top:0px;" />
                             <input id="buttonEye" onclick="clickeye(event)" type="image" src="https://icons.iconarchive.com/icons/glyphish/glyphish/24/12-eye-icon.png">
                             @*<span asp-validation-for="Input.Password" class="text-danger"></span>*@
                         </div>
                         <div class="form-group">
-                            <div class="checkbox" id="checkboxDiv" >
+                            <div class="checkbox" id="checkboxDiv">
                                 <label asp-for="Input.RememberMe">
                                     <input asp-for="Input.RememberMe" />
                                     @Html.DisplayNameFor(m => m.Input.RememberMe)
@@ -50,63 +50,58 @@
                         <div class="form-group">
                             <button value="submit" type="submit" class="btn btn-default" id="loginButton">Log in</button>
                         </div>
-                        <div>
-                            <p class="normalText">
-                                Or login with
-                            </p>
-                        </div>
-                        <!-- div facebook and google login -->
-                        <div>
-                            <div>
-                                <input class="socialButton" id="socialButtonFacebook" type="button" value="Facebook">
-                            </div>
-                            <div>
-                                <input class="socialButton" id="socialButtonGoogle" type="button" value="Google">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            @*<p>
-                                    <a asp-page="./ForgotPassword">Forgot your password?</a>
-                                </p>*@
-                            <p class="normalText" id="nonMemberText">
-                                @*Not a member? <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register now</a>*@
-                                Not a member? <a asp-controller="Sistema" asp-action="form">Register now</a>
-                            </p>
-                        </div>
                     </form>
                 </section>
+                <div>
+                    <p class="normalText">
+                        Or login with
+                    </p>
+                </div>
+                <!-- div facebook and google login -->
+                <div>
+
+                    <div class="col-md-6 col-md-offset-2">
+                        <section>
+                            @{
+                                if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                                {
+                                    //quando da logout por algum motivo o Model.ExternalLogins se torna null,
+                                    //então para não ficar visualmente feio essa div está aqui
+                                    <div>
+                                        <input class="socialButton" id="socialButtonGoogle" type="button" value="Google">
+                                    </div>
+                                }
+                                else
+                                {
+                                    <form asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                                        <div>
+                                            <p>
+                                                @foreach (var provider in Model.ExternalLogins)
+                                                {
+                                                    <button type="submit" id="socialButtonGoogle" class="btn btn-default socialButton" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                                }
+                                            </p>
+                                        </div>
+                                    </form>
+                                }
+                            }
+                        </section>
+                    </div>
+
+                    <div>
+                        <input class="socialButton" id="socialButtonFacebook" type="button" value="Facebook">
+                    </div>
+                   
+                </div>
+                <div class="form-group">
+                    <p class="normalText" id="nonMemberText">
+                        Not a member? <a asp-controller="Sistema" asp-action="form">Register now</a>
+                    </p>
+                </div>
+
             </div>
         </div>
-        @*<div class="col-md-6 col-md-offset-2">
-                <section>
-                    <h4>Use another service to log in.</h4>
-                    <hr />
-                    @{
-                        if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                        {
-                            <div>
-                                <p>
-                                    There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                                    for details on setting up this ASP.NET application to support logging in via external services.
-                                </p>
-                            </div>
-                        }
-                        else
-                        {
-                            <form asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                                <div>
-                                    <p>
-                                        @foreach (var provider in Model.ExternalLogins)
-                                        {
-                                            <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                        }
-                                    </p>
-                                </div>
-                            </form>
-                        }
-                    }
-                </section>
-            </div>*@
+        
     </div>
 </body>
 
